samples/_failures_safe/1761721431_554c1f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_111dcb68.c: In function ‘main’:
./samples/SAFE/__tmp_111dcb68.c:160:9: error: expected expression at end of input
  160 |         if (process_input(sm,
      |         ^~
./samples/SAFE/__tmp_111dcb68.c:160:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_111dcb68.c:160:9: error: expected declaration or statement at end of input
